--- a/css/style.css
+++ b/css/style.css
@@ -479,6 +479,7 @@ p{
 #user-name{
     color: var(--destaque);
     font-weight: bold;
+    /* text-shadow: 1px 1px 0px #000; */
 }
 
 .boas-vindas{
@@ -494,6 +495,7 @@ p{
     font-size: 2rem;
     font-weight: 200;
     text-align: center;
+    margin-top: 3rem;
 }
 
 .gilberto-lopes{
@@ -501,7 +503,6 @@ p{
     font-size: 5rem;
     font-weight: 900;
     text-align: center;
-    margin-top: 2rem;
 
     background: linear-gradient(45deg, var(--destaque2), #0000ff, var(--secundaria), var(--destaque), var(--destaque2));
     background-size: 400% 100%;
@@ -551,6 +552,7 @@ p{
 
 .img-dev-home{
     max-width: 120px;
+    margin-top: 1rem;
     animation: animaDev 1s linear infinite alternate-reverse;
 }
 
@@ -804,48 +806,6 @@ cite{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    padding: 71px 0rem;
-
-    overflow-x: hidden;
-    margin: 0 auto;
-    max-width: 1110px;
-    position: relative;
-}
-
-.bxs-left-arrow-circle{
-    color: var(--destaque);
-    /* background-color: var(--p);
-    box-shadow: 5px 5px 5px #000; */
-    border-radius: 50%;
-    font-size: 40px;
-    position: absolute;
-    top: 60%;
-    left: 0;
-    cursor: pointer;
-    z-index: 2;
-    transition: .3s ease-in-out;
-}
-
-.bxs-left-arrow-circle:hover{
-    color: var(--secundaria);
-}
-
-.bxs-right-arrow-circle{
-    color: var(--destaque);
-    /* background-color: var(--p);
-    box-shadow: 5px 5px 5px #000; */
-    border-radius: 50%;
-    font-size: 40px;
-    position: absolute;
-    top: 60%;
-    right: 0;
-    cursor: pointer;
-    z-index: 2;
-    transition: .3s ease-in-out;
-}
-
-.bxs-right-arrow-circle:hover{
-    color: var(--secundaria);
 }
 
 #projetos h2{
@@ -854,7 +814,6 @@ cite{
 
 #projetos p{
     color: var(--p);
-    /* text-indent: 30px; */
     text-align: justify;
     padding: 1.25rem;
     max-width: 900px;
@@ -863,16 +822,12 @@ cite{
 .container-projetos{
     display: flex;
     flex-direction: row;
-
-    flex-wrap: nowrap;
-
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     margin-top: 2rem;
-
+    padding: 0 10rem;
     min-width: 100%;
-    transition: .5s ease-in-out;
-    transform: translateX(360px);
 }
 
 .card-projetos{
@@ -880,14 +835,7 @@ cite{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.projeto-vazio {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 320px;
+    margin-top: 3rem;
 }
 
 .card-projetos .bxl-html5{
@@ -912,9 +860,9 @@ cite{
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    width: 320px;
-    height: 660px;
-    padding: 88px 15px;
+    width: 300px;
+    height: 600px;
+    padding: 70px 15px;
     margin: 1.25rem;
     display: flex;
     justify-content: center;
@@ -976,6 +924,14 @@ cite{
     align-items: center;
     min-height: 100vh;
     padding: 71px 1.25rem;
+}
+
+.contato-user{
+    text-align: justify;
+    color: #000;
+    background-color: rgba(173, 216, 230, 0.51);
+    padding: 5px;
+    border-radius: 20px;
 }
 
 #contato form h2{
