creating directory structuring

--- a/src/public/css/style_desktop.css
+++ b/src/public/css/style_desktop.css
@@ -3,13 +3,13 @@
 /* FONT-WEIGHT 100 */
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-Thin.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-Thin.ttf) format('truetype');
     font-weight: 100;
     font-style: normal;
 }
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-ThinItalic.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-ThinItalic.ttf) format('truetype');
     font-weight: 100;
     font-style: italic;
 }
@@ -17,13 +17,13 @@
 /* FONT-WEIGHT 200 */
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-ExtraLight.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-ExtraLight.ttf) format('truetype');
     font-weight: 200;
     font-style: normal;
 }
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-ExtraLightItalic.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-ExtraLightItalic.ttf) format('truetype');
     font-weight: 200;
     font-style: italic;
 }
@@ -31,13 +31,13 @@
 /* FONT-WEIGHT 300 */
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-Light.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-Light.ttf) format('truetype');
     font-weight: 300;
     font-style: normal;
 }
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-LightItalic.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-LightItalic.ttf) format('truetype');
     font-weight: 300;
     font-style: italic;
 }
@@ -45,13 +45,13 @@
 /* FONT-WEIGHT 400 */
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-Regular.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-Regular.ttf) format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-Italic.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-Italic.ttf) format('truetype');
     font-weight: 400;
     font-style: italic;
 }
@@ -59,13 +59,13 @@
 /* FONT-WEIGHT 500 */
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-Medium.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-Medium.ttf) format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-MediumItalic.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-MediumItalic.ttf) format('truetype');
     font-weight: 500;
     font-style: italic;
 }
@@ -73,13 +73,13 @@
 /* FONT-WEIGHT 700 */
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-Bold.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-Bold.ttf) format('truetype');
     font-weight: 700;
     font-style: normal;
 }
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-BoldItalic.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-BoldItalic.ttf) format('truetype');
     font-weight: 700;
     font-style: italic;
 }
@@ -87,13 +87,13 @@
 /* FONT-WEIGHT 800 */
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-ExtraBold.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-ExtraBold.ttf) format('truetype');
     font-weight: 800;
     font-style: normal;
 }
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-ExtraBoldItalic.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-ExtraBoldItalic.ttf) format('truetype');
     font-weight: 800;
     font-style: italic;
 }
@@ -101,13 +101,13 @@
 /* FONT-WEIGHT 900 */
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-Black.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-Black.ttf) format('truetype');
     font-weight: 900;
     font-style: normal;
 }
 @font-face {
     font-family: 'Poppins';
-    src: url(../fonts/Poppins/Poppins-BlackItalic.ttf) format('truetype');
+    src: url(../assets/fonts/Poppins/Poppins-BlackItalic.ttf) format('truetype');
     font-weight: 900;
     font-style: italic;
 }
@@ -1021,7 +1021,7 @@ cite{
 
 .iphone{
     border-radius: 30px;
-    background-image: url(../img/iphone-preto.png);
+    background-image: url(../assets/img/iphone-preto.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -1035,7 +1035,7 @@ cite{
 }
 
 .iphone.branco{
-    background-image: url(../img/iphone-branco.png);
+    background-image: url(../assets/img/iphone-branco.png);
 }
 
 .iphone img{
@@ -1101,7 +1101,7 @@ cite{
 /* SECTION CONTATO */
 
 #contato{
-    background-image: url(../img/contato.jpg);
+    background-image: url(../assets/img/contato.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
